clusters/wrtk8s/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: paper.jgarr.net
spec:
  ingressClassName: traefik
  rules:
    - host: paper.jgarr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
  tls:
    - hosts:
        - paper.jgarr.net
      secretName: paperless-ngx-tls
